<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">计算器</string>
    <string name="jieguo">结果</string>
    <string name="shuru">请输入</string>
    <string name="ac">AC</string>
    <string name="delete">←</string>
    <string name="shift">+/-</string>
    <string name="percent">%</string>
    <string name="x">x</string>
    <string name="left">(</string>
    <string name="four">4</string>
    <string name="genhao">√</string>
    <string name="chu">÷</string>
    <string name="seven">7</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="jian">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="jia">+</string>
    <string name="zero">0</string>
    <string name="right">)</string>
    <string name="etc">=</string>
    <string name="point">.</string>
</resources>
