<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calMainActivity" >


    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="0"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:inputType="" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="0"
        android:background="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:layout_weight="0">

        <Button
            android:id="@+id/AC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:text="@string/ac"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shan"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/delete"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/fu"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/shift"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/baifen"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/percent"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/left"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/left"
            android:textSize="20sp" />


        <Button
            android:id="@+id/genhao"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/genhao"
            android:textSize="20sp" />

        <Button
            android:id="@+id/chu"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/chu"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/seven"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/eight"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nine"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/x"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/x"
            android:textSize="20sp" />

        <Button
            android:id="@+id/four"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/four"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/five"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/five"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/six"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/six"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/jian"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/jian"
            android:textSize="20sp" />

        <Button
            android:id="@+id/one"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/one"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/two"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/two"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/three"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/three"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/add"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="4"
            android:text="@string/jia"
            android:textSize="20sp" />

        <Button
            android:id="@+id/right"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/right"
            android:textSize="20sp" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@color/colorBlack"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/."
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/point"
                android:textSize="20sp" />

            <Button
                android:id="@+id/etc"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/etc"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>